<resources>

    <style name="textStyle">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:background">@android:color/transparent</item>
        <item name="android:drawablePadding">8dp</item>
        <item name="android:textColor">#000</item>
        <item name="android:textColorHint">#000</item>
        <item name="android:textSize">25sp</item>
    </style>

    <string name="app_name">SampurnaSewaAgile</string>

    <string-array name="availability">
        <item>Available</item>
        <item>Not available</item>
    </string-array>

    <string name="log_in_to_your_account">Log in to your\naccount</string>
    <string name="log_in_to_your_account_admin">Log in to your admin \naccount</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot?</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password_subtitle">Please enter your email to receive a link to create a new password via email.</string>
    <string name="forgot_password_title">Forgot password?</string>
    <string name="submit">Submit</string>

    <string name="all_fields_with_are_mandatory">All fields with (<font color="#f1222f">*</font>) are mandatory</string>
    <string name="form_full_name">Full Name <font color="#f1222f">*</font></string>
    <string name="form_username">Username <font color="#f1222f">*</font></string>
    <string name="form_email">Email <font color="#f1222f">*</font></string>
    <string name="form_contact">Phone No <font color="#f1222f">*</font></string>
    <string name="form_address">Address <font color="#f1222f">*</font></string>
    <string name="form_password">Password <font color="#f1222f">*</font></string>
    <string name="form_confirm_password">Confirm Password <font color="#f1222f">*</font></string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="hint_email">example@example.com</string>
    <string name="re_enter_password">re-enter password</string>
    <string name="hint_address">address</string>
    <string name="already_have_account">Already have account? click <font color="#6200ea">here</font></string>
    <string name="form_job_name">Job Name <font color="#f1222f">*</font></string>
    <string name="form_job_detail">Job Detail <font color="#f1222f">*</font></string>
    <string name="form_minumum">Minimum Charge <font color="#f1222f">*</font></string>
    <string name="form_available">Availability <font color="#f1222f">*</font></string>
    <string name="jobname">Jobname</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_as_admin">Login as Admin</string>
    <string name="sign_up">Sign Up</string>
    <string name="addjob">Add Job</string>
    <string name="uptjob">Update Job</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
