<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/normal"
                android:includeFontPadding="false"
                android:padding="5dp"
                android:text="Add new job details here"
                android:textColor="@color/blackTextColor"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/normal"
                android:includeFontPadding="false"
                android:padding="5dp"
                android:text="@string/all_fields_with_are_mandatory"
                android:textColor="@color/colorLightGrey"
                android:textSize="15sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/jobImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:elevation="1dp"
                android:src="@drawable/ic_person" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/normal"
                android:includeFontPadding="false"
                android:padding="5dp"
                android:text="@string/form_job_name"
                android:textColor="@color/blackTextColor"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/ujobname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_radius_etext_unfill"
                android:fontFamily="@font/normal"
                android:hint="@string/jobname"
                android:includeFontPadding="false"
                android:inputType="textCapWords"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/normal"
                android:includeFontPadding="false"
                android:padding="5dp"
                android:text="@string/form_job_detail"
                android:textColor="@color/blackTextColor"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/ujobdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_radius_etext_unfill"
                android:focusable="true"
                android:fontFamily="@font/normal"
                android:hint="Job Detail"
                android:includeFontPadding="false"
                android:inputType="textCapCharacters"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/normal"
                android:includeFontPadding="false"
                android:padding="5dp"
                android:text="@string/form_minumum"
                android:textColor="@color/blackTextColor"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/uminimumcharge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_radius_etext_unfill"
                android:focusable="true"
                android:fontFamily="@font/normal"
                android:hint="Minimum Charge"
                android:includeFontPadding="false"
                android:inputType="number"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/normal"
                android:includeFontPadding="false"
                android:padding="5dp"
                android:text="@string/form_available"
                android:textColor="@color/blackTextColor"
                android:textSize="17sp" />

            <Spinner
                android:id="@+id/uavail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_radius_etext_unfill"
                android:entries="@array/availability"
                android:focusable="true"
                android:fontFamily="@font/normal"
                android:includeFontPadding="false"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/upt_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:background="@drawable/shape_button_fill"
                android:elevation="3dp"
                android:fontFamily="@font/normal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/uptjob"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>